force-app/main/default/objects/Lead/fields/AcademicTitle__c.field-meta.xml
<CustomField>
    <fullName>AcademicTitle__c</fullName>
    <label>Academic Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>