force-app/main/default/objects/Lead/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>