force-app/main/default/objects/Lead/fields/ContactLocationAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationAddressLine2__c</fullName>
    <formula>LocationAddressLine2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location Address Line 2</label>
    <type>Text</type>
</CustomField>