force-app/main/default/objects/Lead/fields/ContactLocationAddressLine3__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationAddressLine3__c</fullName>
    <formula>LocationAddressLine3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location Address Line 3</label>
    <type>Text</type>
</CustomField>