force-app/main/default/objects/Lead/fields/ContactLocationCity__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationCity__c</fullName>
    <formula>LocationCity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location City</label>
    <type>Text</type>
</CustomField>