force-app/main/default/objects/Lead/fields/ContactLocationCountry__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationCountry__c</fullName>
    <formula>Text(LocationCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location Country</label>
    <type>Text</type>
</CustomField>