force-app/main/default/objects/Lead/fields/ContactLocationPoBox__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationPoBox__c</fullName>
    <formula>LocationPoBox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location PO Box</label>
    <type>Text</type>
</CustomField>