force-app/main/default/objects/Lead/fields/ContactLocationState__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationState__c</fullName>
    <formula>LocationState__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location State</label>
    <type>Text</type>
</CustomField>