force-app/main/default/objects/Lead/fields/ContactLocationStreetNr__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationStreetNr__c</fullName>
    <formula>LocationStreetNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location Street, Nr</label>
    <type>Text</type>
</CustomField>