force-app/main/default/objects/Lead/fields/ContactLocationZip__c.field-meta.xml
<CustomField>
    <fullName>ContactLocationZip__c</fullName>
    <formula>LocationZip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Location ZIP</label>
    <type>Text</type>
</CustomField>