force-app/main/default/objects/Lead/fields/DuSieOwner__c.field-meta.xml
<CustomField>
    <fullName>DuSieOwner__c</fullName>
    <label>Du/Sie (Owner)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Du</fullName>
            </value>
            <value>
                <fullName>Sie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>