force-app/main/default/objects/Lead/fields/InactiveOwner__c.field-meta.xml
<CustomField>
    <fullName>InactiveOwner__c</fullName>
    <formula>NOT( Owner:User.IsActive )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Owner</label>
    <type>Checkbox</type>
</CustomField>