force-app/main/default/objects/Lead/fields/LeadTypeGmund__c.field-meta.xml
<CustomField>
    <fullName>LeadTypeGmund__c</fullName>
    <description>04.04.2016, ary: Kann gelegentlich gelöscht werden.</description>
    <label>Lead Type (Gmund)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EndCustomer</fullName>
                <label>End Customer</label>
            </value>
            <value>
                <fullName>PrinterProcessor</fullName>
                <label>Printer / Processor</label>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>MediaRepresentatives</fullName>
                <label>Media Representatives</label>
            </value>
            <value>
                <fullName>GmundInternal</fullName>
                <label>Gmund internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>