force-app/main/default/objects/Lead/fields/LocationAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>LocationAddressLine2__c</fullName>
    <description>ACHTUNG: Field Label und API Name stimmen nicht überein. Grund sind aufwändige Trigger- und Schnittstellenanpassungen bei API Namenswechsel. lgu 12.11.2014</description>
    <label>Location Name Addition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>