force-app/main/default/objects/Lead/fields/LocationPoBox__c.field-meta.xml
<CustomField>
    <fullName>LocationPoBox__c</fullName>
    <label>Location PO Box</label>
    <length>80</length>
    <type>Text</type>
</CustomField>