force-app/main/default/objects/Lead/fields/LocationStreetNr__c.field-meta.xml
<CustomField>
    <fullName>LocationStreetNr__c</fullName>
    <label>Location Street, Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>