force-app/main/default/objects/Lead/fields/Mailing__c.field-meta.xml
<CustomField>
    <fullName>Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>15.03.2017, ary: Ist alte Checkbox vor Kampagnen, kann gelegentlich gelöscht werden.</description>
    <label>Mailing</label>
    <type>Checkbox</type>
</CustomField>