force-app/main/default/objects/Lead/fields/NoCalls__c.field-meta.xml
<CustomField>
    <fullName>NoCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Calls</label>
    <type>Checkbox</type>
</CustomField>