force-app/main/default/objects/Lead/fields/NoContactAtAll__c.field-meta.xml
<CustomField>
    <fullName>NoContactAtAll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Contact at all</label>
    <type>Checkbox</type>
</CustomField>