force-app/main/default/objects/Lead/fields/NoEmails__c.field-meta.xml
<CustomField>
    <fullName>NoEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Emails</label>
    <type>Checkbox</type>
</CustomField>