force-app/main/default/objects/Lead/fields/UnitRelevance__c.field-meta.xml
<CustomField>
    <fullName>UnitRelevance__c</fullName>
    <label>Unit Relevance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLC</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>GBCH</fullName>
            </value>
            <value>
                <fullName>GBUS</fullName>
            </value>
            <value>
                <fullName>HBC</fullName>
            </value>
            <value>
                <fullName>HYS</fullName>
            </value>
            <value>
                <fullName>SVH</fullName>
            </value>
            <value>
                <fullName>XB</fullName>
            </value>
            <value>
                <fullName>GBSGP</fullName>
            </value>
            <value>
                <fullName>GBDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>