force-app/main/default/objects/Lead/fields/Xing__c.field-meta.xml
<CustomField>
    <fullName>Xing__c</fullName>
    <label>Xing</label>
    <type>Url</type>
</CustomField>