force-app/main/default/objects/Lead/recordTypes/LeadBusiness.recordType-meta.xml
<RecordType>
    <fullName>LeadBusiness</fullName>
    <active>true</active>
    <businessProcess>LeadBusiness</businessProcess>
    <label>Business</label>
</RecordType>