force-app/main/default/objects/Lead/recordTypes/LeadCandidate.recordType-meta.xml
<RecordType>
    <fullName>LeadCandidate</fullName>
    <active>true</active>
    <businessProcess>LeadCandidate</businessProcess>
    <label>Recruiting</label>
</RecordType>