force-app/main/default/objects/Lead/listViews/X110_All_Open_Leads.listView-meta.xml
<ListView>
    <fullName>X110_All_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>JobTitle__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UnitRelevance__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.LeadBusiness</value>
    </filters>
    <label>110 - All Open Leads</label>
    <language>en_US</language>
</ListView>