force-app/main/default/objects/Lead/listViews/X400_HBC_All_open_Leads.listView-meta.xml
<ListView>
    <fullName>X400_HBC_All_open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>JobTitle__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UnitRelevance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.LeadBusiness</value>
    </filters>
    <filters>
        <field>UnitRelevance__c</field>
        <operation>equals</operation>
        <value>HBC</value>
    </filters>
    <label>400 - HBC - All open Leads</label>
    <language>en_US</language>
</ListView>